# ecstrings

./: .gitignore  CMakeLists.txt  README.md  output_layout.cmake
include/: CMakeLists.txt  ecstrings.h
scripts/: ecstrings_get_project_targets.cmake
src/: CMakeLists.txt  ecstrings.c
tests/overview/: CMakeLists.txt  overview.c  provider.c  provider.h
